@@ -5,6 +5,7 @@ New features:
 ..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)
 
 Bug fixes:
+A.F....... [ZBX-5029] fixed inherited item interface being updated incorrectly when changing it's type (Pavels)
 A.F....... [ZBX-4958] fixed undefined indexes when switching auth method (Eduard)
 ..F....... [ZBX-5071] fixed macros being deleted when leaving the "macro" and "value" fields empty (Pavels)
 .......PS. [ZBX-5076] fixed possible server or proxy crash when using Calculated, DB Monitor, SSH or Telnet items (Sasha)
@@ -35,6 +36,7 @@ New features:
 ..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)
 
 Bug fixes:
+A.F....... [ZBX-5029] fixed inherited item interface being updated incorrectly when changing it's type (Pavels)
 A.F....... [ZBX-4958] fixed undefined indexes when switching auth method (Eduard)
 ..F....... [ZBX-5071] fixed macros being deleted when leaving the "macro" and "value" fields empty (Pavels)
 .......PS. [ZBX-5076] fixed possible server or proxy crash when using Calculated, DB Monitor, SSH or Telnet items (Sasha)
